# DesignPatternsCLion

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Observer/: CMakeLists.txt  CurrentWeatherWidget.cpp  CurrentWeatherWidget.h  Observer.h  ObserverMain.cpp  Presenter.h  Subject.h  WeatherStation.cpp  WeatherStation.h
Strategy/: CMakeLists.txt  StrategyMain.cpp
Strategy/Core/: Duck.cpp  Duck.h
Strategy/FlyBehaviors/: FlyBehavior.h  FlyWithWings.cpp  FlyWithWings.h
Strategy/QuackBehaviors/: QuackBehavior.h  SimpleQuack.cpp  SimpleQuack.h
